# Tartae

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp
Editor/Assets/: EditorInit.cpp
Editor/Inspector/: Panel.cpp  Panel.hpp
Engine/: CMakeLists.txt
Engine/Base/: Game.h  Logger.h  Main.cpp
Engine/Handlers/: ComponentHandler.cpp  ComponentHandler.h
Engine/Renderer/: Renderer.cpp  Renderer.h
Game/: Game.cpp
